--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unify AI Power</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="chatbox-wrapper">
-    <div class="message-box">
-      <div class="chat response">
-        <img src="img/chatbot.jpg">
-        <span>Hello there! <br> 
-          How can I help you today.
-        </span>
-      </div>
-    </div>
-    <div class="messagebar">
-      <div class="bar-wrapper">
-        <input type="text" placeholder="Enter your message...">
-        <button>
-          <span class="material-symbols-rounded">
-            send
-            </span>
-        </button>
-      </div>
-    </div>
-  </div>
+    <header>
+        <h1>Unify AI Power</h1>
+        <nav>
+            <ul>
+                <li><a href="#usage">Usage Statistics</a></li>
+                <li><a href="#features">Unlock Potential</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <script src="script.js"></script>
+    <section id="usage">
+        <h2>Usage Statistics</h2>
+        <div class="stats">
+            <p>GitHub stars: <span id="github-stars">+1234</span></p>
+            <p>Docker pulls: <span id="docker-pulls">+5678</span></p>
+            <p>Project started: <span id="project-started">January 2023</span></p>
+        </div>
+    </section>
+
+    <section id="features">
+        <h2>Unlock Potential</h2>
+        <p>Explore our unique and powerful features:</p>
+        <ul>
+            <li>Advanced agents with file handling, code interpretation, and API actions</li>
+            <li>Execute code in multiple languages securely via API with zero setup - Python, JavaScript, TypeScript, Go, and more</li>
+            <li>AI model selection including Anthropic, AWS, OpenAI, Azure, and more</li>
+            <li>Create React, HTML code, and Mermaid diagrams in chat</li>
+            <li>Analyze images and chat with files using various endpoints</li>
+            <li>Split messages to create multiple conversation threads for better context control</li>
+            <li>Search for messages, files, and code snippets in an instant</li>
+        </ul>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Unify AI Power. All rights reserved.</p>
+    </footer>
 </body>
 </html>
