--- a/index.html
+++ b/index.html
@@ -76,13 +76,12 @@
           <p class="uppercase tracking-loose w-full">What business are you?</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
 بیرۆکە دروست دەکەین، ئایندە پەروەردەدەکەین!
-We create ideas, we build the future!
           </h1>
           <p class="leading-normal text-2xl mb-8">
-            Sub-hero message, not too long and not too short. Make it just right!
+            We create ideas, we build the future!
           </p>
           <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            Subscribe
+            دەستپێبکە
           </button>
         </div>
         <!--Right Col-->
@@ -113,7 +112,7 @@ We create ideas, we build the future!
     <section class="bg-white border-b py-8">
       <div class="container max-w-5xl mx-auto m-8">
         <h2 class="w-full my-2 text-5xl font-bold leading-tight text-center text-gray-800">
-          Title
+          ژیری دەستکردەکەمان چییە؟ و لەلایەن کێ بنیاد دراوە؟
         </h2>
         <div class="w-full mb-4">
           <div class="h-1 mx-auto gradient w-64 opacity-25 my-0 py-0 rounded-t"></div>
