--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>
       Fakher Mergasory Artificial Intellegence
     </title>
-    <meta name="description" content="Simple landind page" />
+    <meta name="description" content="FMAI" />
     <meta name="keywords" content="" />
     <meta name="author" content="" />
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <!--Replace with your tailwind.css once created-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" />
+    <link href="https://www.kurdfonts.com/dl/tmp/8233989/NRT-Reg.ttf" rel="stylesheet" />
     <!-- Define your gradient here - use online tools to find a gradient matching your branding-->
     <style>
       .gradient {
-        background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+        background: linear-gradient(90deg, #260b6b 0%, #034557 100%);
       }
     </style>
   </head>
