--- a/index.html
+++ b/index.html
@@ -126,10 +126,12 @@
         <div class="flex flex-wrap">
           <div class="w-5/6 sm:w-1/2 p-6">
             <h3 class="text-3xl text-gray-800 font-bold leading-none mb-3">
-              Lorem ipsum dolor sit amet
+              FMAI
             </h3>
             <p class="text-gray-600 mb-8">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at ipsum eu nunc commodo posuere et sit amet ligula.
+              دەستکردی زیرەکی فاخیر مێرگەسۆری (FMAI) سیستەمێکی پێشکەوتووی AI یە کە بۆ بەرزکردنەوەی ئەزموونی پەروەردەیی بۆ هەردوو خوێندکار و مامۆستا پەرەی پێدراوە. بە شێوەیەک داڕێژراوە کە چارەسەری زیرەک پێشکەش بکات کە فێربوون کاراتر و کارلێککارانەتر و دەستڕاگەیشتنتر دەکات. بە تێکەڵکردنی AI لە پەروەردەدا، FMAI یارمەتی ڕێکخستنی پرۆسەی وانەوتنەوە دەدات، پشتگیری پێشکەش بە خوێندکاران دەکات.
+
+ئەم سیستەمە لەلایەن شوان ئومێد و ڕاڤیار جیهاد قوتابیانی پۆلی (١٠)ی ئامادەیی لە قوتابخانەی شەهید فاخیر مێرگەسۆری ئینگلیزی ناحوکمی دروستکراوە.
               <br />
               <br />
 
