--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>
             </li>
           </ul>
-       <a href="your-page.html" class="mx-auto lg:mx-0">
+       <a href="chat.html" class="mx-auto lg:mx-0">
   <button
     id="navAction"
     class="hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
