--- a/chat.html
+++ b/chat.html
@@ -15,7 +15,7 @@
   <div class="chatbox-wrapper">
     <div class="message-box">
       <div class="chat response">
-        <img src="img/chatbot.jpg">
+        <img src="IMG_3889.png">
         <span>Hello there! <br> 
           How can I help you today.
         </span>
