--- a/chat.html
+++ b/chat.html
@@ -16,14 +16,14 @@
     <div class="message-box">
       <div class="chat response">
         <img src="IMG_3889.png">
-        <span>Hello there! <br> 
-          How can I help you today.
+        <span>سڵاو، <br> 
+         چۆن دەتوانم هاوکارت بم ئەمڕۆ
         </span>
       </div>
     </div>
     <div class="messagebar">
       <div class="bar-wrapper">
-        <input type="text" placeholder="Enter your message...">
+        <input type="text" placeholder="داواکارییەکەت بنووسە...">
         <button>
           <span class="material-symbols-rounded">
             send
