--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
               FMAI
             </h3>
             <p class="text-gray-600 mb-8">
-              دەستکردی زیرەکی فاخیر مێرگەسۆری (FMAI) سیستەمێکی پێشکەوتووی AI یە کە بۆ بەرزکردنەوەی ئەزموونی پەروەردەیی بۆ هەردوو خوێندکار و مامۆستا پەرەی پێدراوە. بە شێوەیەک داڕێژراوە کە چارەسەری زیرەک پێشکەش بکات کە فێربوون کاراتر و کارلێککارانەتر و دەستڕاگەیشتنتر دەکات. بە تێکەڵکردنی AI لە پەروەردەدا، FMAI یارمەتی ڕێکخستنی پرۆسەی وانەوتنەوە دەدات، پشتگیری پێشکەش بە خوێندکاران دەکات.
+              زیرەکی دەستکردی فاخیر مێرگەسۆری سیستەمێکی پێشکەوتووی زیرەکی دەستکردە کە بۆ بەرزکردنەوەی ئەزموونی پەروەردەیی خوێندکار و مامۆستا پەرەی پێدراوە. بە شێوەیەک داڕێژراوە کە چارەسەری زیرەک پێشکەش بکات کە فێربوون کاراتر کارلێککەرانەتر و بە سانایی دەکات. بە تێکەڵکردنی زیرەکی دەستکرد لەگەڵ پەروەردەدا، زیرەکی دەستکردی فاخیر مێرگەسۆری یارمەتی ڕێکخستنی پڕۆسەی وانەوتنەوە دەدات و پشتگیری پێشکەش بە خوێندکاران دەکات.
 
-ئەم سیستەمە لەلایەن شوان ئومێد و ڕاڤیار جیهاد قوتابیانی پۆلی (١٠)ی ئامادەیی لە قوتابخانەی شەهید فاخیر مێرگەسۆری ئینگلیزی ناحوکمی دروستکراوە.
+ئەم سیستەمە لەلایان (شوان ئومێد) و (ڕاڤیار جیهاد) قوتابیانی پۆلی (١٠)ی ئامادەیی لە قوتابخانەی شەهید فاخیر مێرگەسۆری ئینگلیزی ناحوکمی دروستکراوە.
               <br />
               <br />
 
