--- a/index.html
+++ b/index.html
@@ -88,13 +88,15 @@
           <p class="leading-normal text-2xl mb-8">
             We create ideas, we build the future!
           </p>
-          <button class="mx-auto lg:mx-0 hover:underline bg-white text-gray-800 font-bold rounded-full my-6 py-4 px-8 shadow-lg focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out">
-            دەستپێبکە
-          </button>
-        </div>
+  <button
+    id="navAction"
+    class="hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
+  >
+    دەستپێبکە
+  </button>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
-          <img class="w-full md:w-4/5 z-50" src="hero.png" />
+          <img class="w-full md:w-4/5 z-50" src="IMG_3889.png" />
         </div>
       </div>
     </div>
