--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden mt-2 lg:mt-0 bg-white lg:bg-transparent text-black p-4 lg:p-0 z-20" id="nav-content">
           <ul class="list-reset lg:flex justify-end flex-1 items-center">
             <li class="mr-3">
-              <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Active</a>
+              <a class="inline-block py-2 px-4 text-black font-bold no-underline" href="#">Menu</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>
+              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href= "https://www.instagram.com/fakher_mergasory_highschool?igsh=MW91c25ubXViaDAwbA==">Fakher Mergasory Socials</a>
             </li>
             <li class="mr-3">
-              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="#">link</a>
+              <a class="inline-block text-black no-underline hover:text-gray-800 hover:text-underline py-2 px-4" href="chat.html">Chat Now</a>
             </li>
           </ul>
        <a href="chat.html" class="mx-auto lg:mx-0">
@@ -81,7 +81,7 @@
       <div class="container px-3 mx-auto flex flex-wrap flex-col md:flex-row items-center">
         <!--Left Col-->
         <div class="flex flex-col w-full md:w-2/5 justify-center items-start text-center md:text-left">
-          <p class="uppercase tracking-loose w-full">What business are you?</p>
+          <p class="uppercase tracking-loose w-full">Fakher Mergasory Artificial Intellegnece</p>
           <h1 class="my-4 text-5xl font-bold leading-tight">
 بیرۆکە دروست دەکەین، ئایندە پەروەردەدەکەین!
           </h1>
@@ -92,7 +92,7 @@
     id="navAction"
     class="hover:underline bg-white text-gray-800 font-bold rounded-full mt-4 lg:mt-0 py-4 px-8 shadow opacity-75 focus:outline-none focus:shadow-outline transform transition hover:scale-105 duration-300 ease-in-out"
   >
-    دەستپێبکە
+    FMAI
   </button>
         <!--Right Col-->
         <div class="w-full md:w-3/5 py-6 text-center">
