--- a/chat.html
+++ b/chat.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-  <title>FMAI</title>
-</head>
-<body>
-  <div class="chatbox-wrapper">
-    <div class="message-box">
-      <div class="chat response">
-        <img src="IMG_3889.png">
-        <span>سڵاو، <br> 
-         چۆن دەتوانم هاوکارت بم ئەمڕۆ
-        </span>
-      </div>
-    </div>
-    <div class="messagebar">
-      <div class="bar-wrapper">
-        <input type="text" placeholder="داواکارییەکەت بنووسە...">
-        <button>
-          <span class="material-symbols-rounded">
-            send
-            </span>
-        </button>
-      </div>
-    </div>
-  </div>
 
-  <script src="script.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Custom CSS File -->
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- Title -->
+    <title>Chat GPT 2.0</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <!-- Google Fonts link for Icon -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+</head>
+
+<body>
+    <!-- Chats container -->
+
+    <!-- Typing container -->
+
+    <!-- Custom JS File -->
+    <script src="assets/js/script.js" defer></script>
 </body>
+
 </html>
